--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 html{
 	background-color: white;
 
+	width: 100%;
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -31,30 +33,35 @@ h6{
 }
 
 h2{
-	width: 1000px;
-	margin: 20px 0px 20px 20px;
+	width: 100%;
+	margin: 2rem 0rem 2rem 2rem;
 
 	color: #A27FD4;
 	font-family: 'Source Sans Pro', sans-serif;
 	text-transform: uppercase;
 	font-weight: bold;
 
-	
+	font-size: 3rem;	
 }
 
 h3{
+	width: 100%;
+	margin: 0rem 0rem 1rem 0rem;
+
 	color: #A27FD4;
 	font-family: 'Source Sans Pro', sans-serif;
 	text-transform: none;
 	font-weight: bold;
+
+	font-size: 2.5rem;
 }
 
 /* ######################################################################### */
 
 .header{
 	background-color: #A27FD4;
-	height: 90px;
-	padding: 10px 10px 10px 20px ;
+	height: 7rem;
+	padding: 1rem 1rem 1rem 2rem ;
 
 	display: flex;
 	justify-content: space-between;
@@ -63,15 +70,15 @@ h3{
 
 .header-logo{
 	height: inherit;
-	margin: 0px 0px 0px 0px;
-	padding: 0px 0px 0px 0px;
+	margin: 0rem 0rem 0rem 0rem;
+	padding: 0rem 0rem 0rem 0rem;
 
 	display: flex;
 	align-items: center;
 }
 
 .header-logo img{
-	height: 70px;
+	height: 6rem;
 	width: auto;
 }
 
@@ -81,8 +88,8 @@ h3{
 }
 
 .header ul{
-	margin: 0px 0px 0px 0px;
-	padding: 0px 0px 0px 0px;
+	margin: 0rem 0rem 0rem 0rem;
+	padding: 0rem 0rem 0rem 0rem;
 	height: inherit;
 
 	list-style: none;
@@ -94,11 +101,11 @@ h3{
 .header a{
 	color: #FFFFFF;
 	text-decoration: none;
-	font-size: 30px;
+	font-size: 2.5rem;
 
 	height: inherit;
 
-	padding: 0px 20px 0px 20px;
+	padding: 0rem 2rem 0rem 2rem;
 }
 
 /* ######################################################################### */
@@ -113,9 +120,9 @@ h3{
 	
 	text-align: justify;
 
-	margin: 0px 0px 0px 0px;
-	border: 0px;
-	padding: 0px 0px 0px 0px;
+	margin: 0rem 0rem 0rem 0rem;
+	border: 0rem;
+	padding: 0rem 0rem 0rem 0rem;
 	/* height: 300px; */
 	height: auto;
 
@@ -125,14 +132,15 @@ h3{
 }
 
 h1{
-	font-size: 40px;
+	font-size: 2.5rem;
+
 	line-height: 1.5;
-	letter-spacing: -.2px;
+	letter-spacing: -.05rem;
 	color: #FFFFFF;
 
 	/* margin: 0px 600px 0px 20px; 600px ancho de img background */
-	margin: 0px 0px 0px 0px;
-	padding: 0px 10px 10px 20px;
+	margin: 0rem 0rem 0rem 0rem;
+	padding: 0rem 1rem 1rem 2rem;
 	/* width: 725px; */
 	/* height: 190px;
 	width: 720px; */
@@ -143,8 +151,8 @@ h1 strong{
 }
 
 .hero-image{
-	margin: 0px 0px 0px 0px;
-	height: 190px;
+	margin: 0rem 0rem 0rem 0rem;
+	height: 12rem;
 }
 
 .hero-image img{
@@ -154,11 +162,13 @@ h1 strong{
 /* ######################################################################### */
 
 .showcase{
-	width: 1000px;
+	width: 100%;
 	margin: 0px auto 0px auto;
 
 	display: flex;
 	flex-direction: column;
+
+	font-size: 1rem;
 	/* align-items: center; */
 	/* justify-content: center; */
 }
@@ -166,14 +176,14 @@ h1 strong{
 .exhibit{
 	background-color: #FDBEFF;
 
-	margin: 20px 0px 20px 0px;
+	margin: 0rem 0rem 2rem 0rem;
 	padding: 0px 0px 0px 0px;
-	border: 4px 4p 4px 4px;
+	border: .5rem .5rem .5rem .4rem;
 	border-color: #A27FD4;
 	border-style: solid;
-	border-radius: 20px;
+	border-radius: 2rem;
 	overflow: hidden;
-	height: 300px;
+	height: 25rem;
 	width: 100%;
 
 	display: flex;
@@ -184,10 +194,12 @@ h1 strong{
 }
 
 .exhibit-text{
+	font-size: 2rem;
+
 	display: inline-block;
 	width: 50%;
 
-	padding: 0px 10px 0px 20px;
+	padding: 0rem 1rem 0rem 2rem;
 
 	text-align: justify;
 }
@@ -208,12 +220,12 @@ h1 strong{
 
 .exhibit-image img{
 	height: inherit;
-	width: 400px;
+	width: 30rem;
 }
 
 /* ######################################################################### */
 .core{
-	width: 1000px;
+	width: 100%;
 	margin: 0px auto 0px auto;
 
 	display: block;
@@ -228,17 +240,17 @@ h1 strong{
 }
 
 .kernel{
-	margin: 20px 0px 20px 0px;
+	margin: 2rem 0rem 2rem 0rem;
 	padding: 0px 0px 0px 0px;
 
 	background-color: #FDBEFF;
-	border: 4px 4p 4px 4px;
+	border: .5rem .5rem .5rem .5rem;
 	border-color: #A27FD4;
 	border-style: solid;
-	border-radius: 20px;
+	border-radius: 2rem;
 	overflow: hidden;
 	
-	width: 300px;
+	width: 30%;
 	
 	display: flex;
 	flex-direction: column;
@@ -250,7 +262,7 @@ h1 strong{
 	border: 0px;
 	padding: 0px 0px 0px 0px;
 	height: auto;
-	width: inherit;
+	width: 100%;
 }
 
 .kernel-text{
@@ -278,20 +290,23 @@ h1 strong{
 .kernel-title{
 	margin: 0px 0px 10px 0px;
 }
+
 .kernel-description{
+	font-size: 2rem;
 	text-align: justify;
 }
 
 .kernel-link{
 	color: #A27FD4;
 
-	margin: 20px 0px 0px 0px;
+	margin: 2rem 0rem 0rem 0rem;
 	border: 1px solid;
-	border-radius: 5px;
-	padding: 5px 20px 5px 20px;
+	border-radius: .5rem;
+	padding: .5rem 2rem .5rem 2rem;
 }
 
 .kernel-link a{
+	font-size: 2.5rem;
 	text-decoration: none;
 }
 
@@ -305,7 +320,7 @@ h1 strong{
 
 /* ######################################################################### */
 .monetization{
-	width: 1000px;
+	width: 100%;
 	margin: 0px auto 0px auto;
 
 	display: block;
@@ -359,42 +374,56 @@ h1 strong{
 	height: inherit;
 	width: inherit;
 }
+
+.store-description{
+	font-size: 2rem;
+}
 /* ######################################################################### */
 
 .contact{
 	/* background-color: #fff7f2; */
 	
-	padding: 10px 20px 10px 20px;
-	height: 120px;
+	padding: 1rem 2rem 1rem 2rem;
+	height: auto;
 
 	/* border: 1px red solid; */
 	/* background-image: url("https://drive.google.com/uc?export=view&id=12bmCfTdPtNL3a-KlEbGZnaQ2LrzHJ4Uz");
 	
 	overflow: hidden;
 	background-repeat: no-repeat; */
-	
+	/*
 	background-position-y: top ;
 	background-position-x: center;
 	background-size: 500px 500px;
-
-	display: flex;
+	*/
+	display: block;
+	/*
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-between;*/
 }
 
 .email{
+	font-size: 2rem;
+
+	width: 100%;
+
+	margin: 0rem 0rem 1rem 2rem;
+
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
 
-	font-size: 30px;
+	font-size: 4rem;
 }
 
-.email label{
-	color: #000000;
-	
-	margin: 0px 20px 0px 0px;
+.email input{
+	font-size: 4rem;
+
+	width: 70%;
+}
+.email button{
+	font-size: 4rem;
 }
 
 .social{
@@ -404,48 +433,49 @@ h1 strong{
 	justify-content: space-between;
 
 	margin: 0px 0px 0px 0px;
-	width: 400px;
+	height: 5rem;
+	width: 100%;
 }
 
 .social-link{
 	display: inline-block;
 
-	margin: 0px 0px;
-	height: 50px;
-	width: 50px;
+	margin: 1rem 0rem 1rem 2rem;
+	height: 5rem;
+	width: 5rem;
 }
 
 .social-link.linkedin{
 	background-image: url("https://drive.google.com/uc?export=view&id=1fv7FfJGpIoyyevgeAg0p_92KaotUhUyq");
-	background-size: 50px auto;
+	background-size: 5rem auto;
 }
 
 .social-link.instagram{
 	background-image: url("https://drive.google.com/uc?export=view&id=1GYet9XWoGK32eaWENQ7gpBr6NejJWKVe");
-	background-size: 50px auto;
+	background-size: 5rem auto;
 }
 
 .social-link.facebook{
 	background-image: url("https://drive.google.com/uc?export=view&id=1LOrbpB6udvMpAsO9hHlpFrpw-oZ-lb1w");
-	background-size: 50px auto;
+	background-size: 5rem auto;
 }
 
 .social-link.github{
 	background-image: url("https://drive.google.com/uc?export=view&id=1rBzNXTTjD7j_EZleduNNtEB3l6kEtpiC");
-	background-size: 50px auto;
+	background-size: 5rem auto;
 }
 
 /* ######################################################################### */
 .footer{
 	/* background-color: #fff7f2; */
-	/* background-color: green; */
+	/*background-color: green;*/
 	background-color: #A27FD4;
 	color: #000000;
 
 	padding: 0px 0px 0px 0px;
-	height: 180px;
+	height: 15rem;
 
-	overflow: hidden;
+	overflow: hidden; /* */
 
 	display: flex;
 	flex-direction: row;
@@ -458,53 +488,53 @@ h1 strong{
 	letter-spacing: 2px; 
 }
 
-.footer-message0{
+.footer-message{
 	margin: 0px 0px 0px 20px;
-	width: 300px;
+	width: 50%;
 	/* justify-self: flex-start; */
 	/* align-self: flex-end; */
+
+	font-size: 4rem;
 }
 
-.footer-image{
-	margin: 0px 20px 0px 0px;
+.footer-img{
+	margin: 0px 0px 0px 0px;
+
+	width: 50%;
 }
+
 .footer-logo{
-	margin: -80px 0px 0px 0px;
+	margin: -20rem 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 
-	width: 280px;
+	width: 200%;
 	/* justify-self: center; */
 	/* align-self: center; */
 }
 
-.footer-message{
-	margin: -150px 0px 0px 0px;
-	width: 300px;
-	/* justify-self: flex-end; */
-	/* align-self: flex-end; */
-}
-
-.footer-message0 p{
-	margin: 0;
-}
-
-.footer-message p{
-	margin: 0;
-}
-
-.footer-message a{
-	color: inherit;
-	text-decoration: none;
-}
-
 .footer-logo img{
 	height: auto;
-	width: 300px;
+	width: 50%;
 	/* overflow: hidden; */
 	/* vertical-align: middle; */
 }
 
-.footer-message img{
-	height: 12px;
+.footer-text{
+	margin: -24rem 0px 0px 0px;
+	padding: 0rem 0px 0px 0px;;
+	width: 100%;
+
+	font-size: 2.5rem;
+	/* justify-self: flex-end; */
+	/* align-self: flex-end; */
+}
+
+.footer-text a{
+	color: inherit;
+	text-decoration: none;
+}
+
+.footer-text img{
+	height: 1.5rem;
 	/* display: inline-block; */
 }
